# Cubed-Launcher

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md
.github/workflows/: release-build.yml
installer/: installer.iss
qml/: Main.qml  Sidebar.qml
qml/Tab/: About.qml  Launch.qml  Setting.qml
qml/Tool/: GamePathSet.qml
resources/: CubedLauncher.desktop  CubedLauncher.desktop.in
src/: cubed_instance.cpp  cubed_instance.hpp  main.cpp  settings.cpp  settings.hpp
src/game-mgmt/: cubed_instance.cpp  cubed_instance.hpp
src/tool/: system_info.hpp
